# intern-kaspersky-task

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  run.sh
client/: Client.cpp  Client.hpp  main.cpp
common/: SocketUtils.cpp  SocketUtils.hpp  Utils.cpp  Utils.h
display_server/: DisplayServer.cpp  DisplayServer.hpp  main.cpp
processing_server/: ProcessingServer.cpp  ProcessingServer.hpp  main.cpp
